Add Windows WPD backend behind a platform-neutral MTP SPI (#4)
* Add Windows WPD backend behind a platform-neutral MTP SPI

The libmtp-specific LibMTP interface leaked MemorySegment device handles,
32-bit integer object ids, and USB vendor/product/bus/devnum identity —
none of which fit the Windows Portable Devices (WPD) model (COM objects,
opaque string object ids, PnP device ids). This reshapes the abstraction
and adds a WPD backend so the library works natively on Windows without
replacing the device driver.

- Introduce MtpBackend: platform-neutral SPI with opaque String object ids,
  opaque DeviceHandle, and a Scan abstraction that preserves the existing
  "detect cheaply, only reopen on topology change" behavior.
- NativeLibMTP now implements MtpBackend (libmtp internals unchanged);
  ROOT_PARENT maps to 0xFFFFFFFF and handles render as unsigned decimals.
- Refactor MTPDeviceBridge, MTPItemInfo, MTPDeviceConnection, MTPFileStore,
  the provider root pseudo-item, and the test double to String ids/handles;
  setLibMTP -> setBackend.
- Add WpdBackend + WpdCom: pure-Java FFM COM (ole32, GUID/PROPERTYKEY/
  PROPVARIANT, vtable dispatch, UTF-16) implementing the SPI, including
  WPD_OBJECT_DATE_MODIFIED (VT_DATE) -> epoch-seconds conversion.
- MtpBackend.defaultBackend() selects WpdBackend on Windows, else libmtp.
- Make integration-test availability guard backend-neutral so it exercises
  WPD on Windows instead of skipping on missing libmtp.
- CI: build/test on a [ubuntu, windows] matrix; README documents both backends.

The libmtp path and FakeLibMTP-backed unit tests are verified on Linux. The
WPD path compiles but is unverified — it has no hardware/COM coverage here and
needs a real Windows run (vtable indices and GUIDs follow PortableDeviceApi.h).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* Fix WPD backend against a real device

The Windows backend was written without a device to test against and
failed on every write path. Fixes fo